--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "styled-components": "^4.3.1"
   },
   "devDependencies": {
+    "eslint": "^7.27.0",
+    "eslint-plugin-react": "^7.24.0",
     "prettier": "^1.18.2"
   },
   "keywords": [
